config/objects/Load_Document__c.object
<CustomObject>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>Load Documents</relationshipLabel>
        <relationshipName>Load_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Proof of Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Load Document</label>
    <nameField>
        <label>Load Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Load Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>